[package]
name        = "wanglandau"
version     = "0.0.1"
edition     = "2021"
authors     = ["Ayan Das <bvits@riseup.net>"]
license     = "MIT"
description = "Model-agnostic Wang–Landau Monte-Carlo core driver"
repository  = "https://github.com/b-vitamins/wanglandau"
documentation = "https://docs.rs/wanglandau"
homepage    = "https://github.com/b-vitamins/wanglandau"
readme      = "README.md"
keywords    = ["monte-carlo", "wang-landau", "statistical-physics", "simulation", "sampling"]
categories  = ["algorithms", "science", "simulation"]

[dependencies]
rand      = "0.9.1"
rand_pcg  = "0.9.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]